@@ -1,0 +1,13 @@
+package it.uniroma3.siw.my_restaurant.repository;
+
+import org.springframework.data.repository.CrudRepository;
+import org.springframework.stereotype.Repository;
+
+import it.uniroma3.siw.my_restaurant.model.Credentials;
+import java.util.Optional;
+
+@Repository
+public interface CredentialsRepository extends CrudRepository<Credentials, Long> {
+
+    Optional<Credentials> findByUsername(String username);
+}
